--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,8 @@ sniffio==1.2.0
 starlette==0.16.0
 typing_extensions==4.0.0
 uvicorn==0.15.0
+
+pip~=21.3.1
+greenlet~=1.1.2
+setuptools~=57.0.0
+SQLAlchemy~=1.4.27
